--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,10 @@
 baseurl = "https://mrtctns.github.io/"
 title = "Mert Çetin"
-theme = "hugo-coder"
+theme = ["hugo-embed-pdf-shortcode", "hugo-coder"]
+enableInlineShortcodes = true
 languagecode = "en"
+relativeURLs = true
+canonifyURLs = true
 defaultcontentlanguage = "en"
 
 paginate = 20
@@ -70,10 +73,10 @@ disqusShortname = "Mert Çetin"
 
 # Menu links
 [[menu.main]]
-  name = "Blog"
-  weight = 1
-  url  = "blog/"
-[[menu.main]]
   name = "About"
+  weight = 1
+  url  = "about/"
+[[menu.main]]
+  name = "Blog"
   weight = 2
-  url = "about/"
+  url = "blog/"
